cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_05557_N1_VPCArch.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Architecture /16 VPC with 6 Private Subnets /20 and 3 Public Subnets /20",
    "Resources": {
        "VPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": "10.16.0.0/16",
                "EnableDnsSupport": true,
                "EnableDnsHostnames": true,
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "HCMWPVPC"
                    }
                ]
            }
        },
        "IPv6CidrBlock": {
            "Type": "AWS::EC2::VPCCidrBlock",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AmazonProvidedIpv6CidrBlock": true
            }
        },
        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "HCMWP-IGW"
                    }
                ]
            }
        },
        "InternetGatewayAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "InternetGatewayId": {
                    "Ref": "InternetGateway"
                }
            }
        },
        "RTPub": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "HCMWP-vpc-rt-pub"
                    }
                ]
            }
        },
        "RTPubDefaultIPv4": {
            "Type": "AWS::EC2::Route",
            "DependsOn": "InternetGatewayAttachment",
            "Properties": {
                "RouteTableId": {
                    "Ref": "RTPub"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "InternetGateway"
                }
            }
        },
        "RTPubDefaultIPv6": {
            "Type": "AWS::EC2::Route",
            "DependsOn": "InternetGatewayAttachment",
            "Properties": {
                "RouteTableId": {
                    "Ref": "RTPub"
                },
                "DestinationIpv6CidrBlock": "::/0",
                "GatewayId": {
                    "Ref": "InternetGateway"
                }
            }
        },
        "RTAssociationPubA": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "SNPUBA"
                },
                "RouteTableId": {
                    "Ref": "RTPub"
                }
            }
        },
        "RTAssociationPubB": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "SNPUBB"
                },
                "RouteTableId": {
                    "Ref": "RTPub"
                }
            }
        },
        "RTAssociationPubC": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "SNPUBC"
                },
                "RouteTableId": {
                    "Ref": "RTPub"
                }
            }
        },
        "SNDBA": {
            "Type": "AWS::EC2::Subnet",
            "DependsOn": "IPv6CidrBlock",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "10.16.16.0/20",
                "AssignIpv6AddressOnCreation": true,
                "Ipv6CidrBlock": {
                    "Fn::Sub": [
                        "${VpcPart}${SubnetPart}",
                        {
                            "SubnetPart": "01::/64",
                            "VpcPart": {
                                "Fn::Select": [
                                    0,
                                    {
                                        "Fn::Split": [
                                            "00::/56",
                                            {
                                                "Fn::Select": [
                                                    0,
                                                    {
                                                        "Fn::GetAtt": [
                                                            "VPC",
                                                            "Ipv6CidrBlocks"
                                                        ]
                                                    }
                                                ]
                                            }
                                        ]
                                    }
                                ]
                            }
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "sn-db-A"
                    }
                ]
            }
        },
        "SNDBB": {
            "Type": "AWS::EC2::Subnet",
            "DependsOn": "IPv6CidrBlock",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        1,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "10.16.80.0/20",
                "AssignIpv6AddressOnCreation": true,
                "Ipv6CidrBlock": {
                    "Fn::Sub": [
                        "${VpcPart}${SubnetPart}",
                        {
                            "SubnetPart": "05::/64",
                            "VpcPart": {
                                "Fn::Select": [
                                    0,
                                    {
                                        "Fn::Split": [
                                            "00::/56",
                                            {
                                                "Fn::Select": [
                                                    0,
                                                    {
                                                        "Fn::GetAtt": [
                                                            "VPC",
                                                            "Ipv6CidrBlocks"
                                                        ]
                                                    }
                                                ]
                                            }
                                        ]
                                    }
                                ]
                            }
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "sn-db-B"
                    }
                ]
            }
        },
        "SNDBC": {
            "Type": "AWS::EC2::Subnet",
            "DependsOn": "IPv6CidrBlock",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        2,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "10.16.144.0/20",
                "AssignIpv6AddressOnCreation": true,
                "Ipv6CidrBlock": {
                    "Fn::Sub": [
                        "${VpcPart}${SubnetPart}",
                        {
                            "SubnetPart": "09::/64",
                            "VpcPart": {
                                "Fn::Select": [
                                    0,
                                    {
                                        "Fn::Split": [
                                            "00::/56",
                                            {
                                                "Fn::Select": [
                                                    0,
                                                    {
                                                        "Fn::GetAtt": [
                                                            "VPC",
                                                            "Ipv6CidrBlocks"
                                                        ]
                                                    }
                                                ]
                                            }
                                        ]
                                    }
                                ]
                            }
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "sn-db-C"
                    }
                ]
            }
        },
        "SNAPPA": {
            "Type": "AWS::EC2::Subnet",
            "DependsOn": "IPv6CidrBlock",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "10.16.32.0/20",
                "AssignIpv6AddressOnCreation": true,
                "Ipv6CidrBlock": {
                    "Fn::Sub": [
                        "${VpcPart}${SubnetPart}",
                        {
                            "SubnetPart": "02::/64",
                            "VpcPart": {
                                "Fn::Select": [
                                    0,
                                    {
                                        "Fn::Split": [
                                            "00::/56",
                                            {
                                                "Fn::Select": [
                                                    0,
                                                    {
                                                        "Fn::GetAtt": [
                                                            "VPC",
                                                            "Ipv6CidrBlocks"
                                                        ]
                                                    }
                                                ]
                                            }
                                        ]
                                    }
                                ]
                            }
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "sn-app-A"
                    }
                ]
            }
        },
        "SNAPPB": {
            "Type": "AWS::EC2::Subnet",
            "DependsOn": "IPv6CidrBlock",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        1,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "10.16.96.0/20",
                "AssignIpv6AddressOnCreation": true,
                "Ipv6CidrBlock": {
                    "Fn::Sub": [
                        "${VpcPart}${SubnetPart}",
                        {
                            "SubnetPart": "06::/64",
                            "VpcPart": {
                                "Fn::Select": [
                                    0,
                                    {
                                        "Fn::Split": [
                                            "00::/56",
                                            {
                                                "Fn::Select": [
                                                    0,
                                                    {
                                                        "Fn::GetAtt": [
                                                            "VPC",
                                                            "Ipv6CidrBlocks"
                                                        ]
                                                    }
                                                ]
                                            }
                                        ]
                                    }
                                ]
                            }
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "sn-app-B"
                    }
                ]
            }
        },
        "SNAPPC": {
            "Type": "AWS::EC2::Subnet",
            "DependsOn": "IPv6CidrBlock",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        2,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "10.16.160.0/20",
                "AssignIpv6AddressOnCreation": true,
                "Ipv6CidrBlock": {
                    "Fn::Sub": [
                        "${VpcPart}${SubnetPart}",
                        {
                            "SubnetPart": "0A::/64",
                            "VpcPart": {
                                "Fn::Select": [
                                    0,
                                    {
                                        "Fn::Split": [
                                            "00::/56",
                                            {
                                                "Fn::Select": [
                                                    0,
                                                    {
                                                        "Fn::GetAtt": [
                                                            "VPC",
                                                            "Ipv6CidrBlocks"
                                                        ]
                                                    }
                                                ]
                                            }
                                        ]
                                    }
                                ]
                            }
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "sn-app-C"
                    }
                ]
            }
        },
        "SNPUBA": {
            "Type": "AWS::EC2::Subnet",
            "DependsOn": "IPv6CidrBlock",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "10.16.48.0/20",
                "MapPublicIpOnLaunch": true,
                "Ipv6CidrBlock": {
                    "Fn::Sub": [
                        "${VpcPart}${SubnetPart}",
                        {
                            "SubnetPart": "03::/64",
                            "VpcPart": {
                                "Fn::Select": [
                                    0,
                                    {
                                        "Fn::Split": [
                                            "00::/56",
                                            {
                                                "Fn::Select": [
                                                    0,
                                                    {
                                                        "Fn::GetAtt": [
                                                            "VPC",
                                                            "Ipv6CidrBlocks"
                                                        ]
                                                    }
                                                ]
                                            }
                                        ]
                                    }
                                ]
                            }
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "sn-pub-A"
                    }
                ]
            }
        },
        "SNPUBB": {
            "Type": "AWS::EC2::Subnet",
            "DependsOn": "IPv6CidrBlock",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        1,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "10.16.112.0/20",
                "MapPublicIpOnLaunch": true,
                "Ipv6CidrBlock": {
                    "Fn::Sub": [
                        "${VpcPart}${SubnetPart}",
                        {
                            "SubnetPart": "07::/64",
                            "VpcPart": {
                                "Fn::Select": [
                                    0,
                                    {
                                        "Fn::Split": [
                                            "00::/56",
                                            {
                                                "Fn::Select": [
                                                    0,
                                                    {
                                                        "Fn::GetAtt": [
                                                            "VPC",
                                                            "Ipv6CidrBlocks"
                                                        ]
                                                    }
                                                ]
                                            }
                                        ]
                                    }
                                ]
                            }
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "sn-pub-B"
                    }
                ]
            }
        },
        "SNPUBC": {
            "Type": "AWS::EC2::Subnet",
            "DependsOn": "IPv6CidrBlock",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "AvailabilityZone": {
                    "Fn::Select": [
                        2,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "10.16.176.0/20",
                "MapPublicIpOnLaunch": true,
                "Ipv6CidrBlock": {
                    "Fn::Sub": [
                        "${VpcPart}${SubnetPart}",
                        {
                            "SubnetPart": "0B::/64",
                            "VpcPart": {
                                "Fn::Select": [
                                    0,
                                    {
                                        "Fn::Split": [
                                            "00::/56",
                                            {
                                                "Fn::Select": [
                                                    0,
                                                    {
                                                        "Fn::GetAtt": [
                                                            "VPC",
                                                            "Ipv6CidrBlocks"
                                                        ]
                                                    }
                                                ]
                                            }
                                        ]
                                    }
                                ]
                            }
                        }
                    ]
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "sn-pub-C"
                    }
                ]
            }
        },
        "IPv6WorkaroundSubnetPUBA": {
            "Type": "Custom::SubnetModify",
            "Properties": {
                "ServiceToken": {
                    "Fn::GetAtt": ["IPv6WorkaroundLambda", "Arn"]
                },
                "SubnetId": {
                    "Ref": "SNPUBA"
                }
            }
        },
        "IPv6WorkaroundSubnetPUBB": {
            "Type": "Custom::SubnetModify",
            "Properties": {
                "ServiceToken": {
                    "Fn::GetAtt": ["IPv6WorkaroundLambda", "Arn"]
                },
                "SubnetId": {
                    "Ref": "SNPUBB"
                }
            }
        },
        "IPv6WorkaroundSubnetPUBC": {
            "Type": "Custom::SubnetModify",
            "Properties": {
                "ServiceToken": {
                    "Fn::GetAtt": ["IPv6WorkaroundLambda", "Arn"]
                },
                "SubnetId": {
                    "Ref": "SNPUBC"
                }
            }
        },
        "IPv6WorkaroundRole": {
            "Type": "AWS::IAM::Role",
            "Properties": {
                "AssumeRolePolicyDocument": {
                    "Version": "2012-10-17",
                    "Statement": [
                        {
                            "Effect": "Allow",
                            "Principal": {
                                "Service": ["lambda.amazonaws.com"]
                            },
                            "Action": ["sts:AssumeRole"]
                        }
                    ]
                },
                "Path": "/",
                "Policies": [
                    {
                        "PolicyName": {
                            "Fn::Sub": "ipv6-fix-logs-${AWS::StackName}"
                        },
                        "PolicyDocument": {
                            "Version": "2012-10-17",
                            "Statement": [
                                {
                                    "Effect": "Allow",
                                    "Action": [
                                        "logs:CreateLogGroup",
                                        "logs:CreateLogStream",
                                        "logs:PutLogEvents"
                                    ],
                                    "Resource": "arn:aws:logs:*:*:*"
                                }
                            ]
                        }
                    },
                    {
                        "PolicyName": {
                            "Fn::Sub": "ipv6-fix-modify-${AWS::StackName}"
                        },
                        "PolicyDocument": {
                            "Version": "2012-10-17",
                            "Statement": [
                                {
                                    "Effect": "Allow",
                                    "Action": ["ec2:ModifySubnetAttribute"],
                                    "Resource": "*"
                                }
                            ]
                        }
                    }
                ]
            }
        },
        "IPv6WorkaroundLambda": {
            "Type": "AWS::Lambda::Function",
            "Properties": {
                "Handler": "index.lambda_handler",
                "Code": {
                    "ZipFile": {
                        "Fn::Sub": "import cfnresponse\nimport boto3\n\ndef lambda_handler(event, context):\n    if event['RequestType'] is 'Delete':\n      cfnresponse.send(event, context, cfnresponse.SUCCESS)\n      return\n\n    responseValue = event['ResourceProperties']['SubnetId']\n    ec2 = boto3.client('ec2', region_name='${AWS::Region}')\n    ec2.modify_subnet_attribute(AssignIpv6AddressOnCreation={\n                                    'Value': True\n                                  }, [...]
                    }
                },
                "Runtime": "python3.9",
                "Role": {
                    "Fn::GetAtt": ["IPv6WorkaroundRole", "Arn"]
                },
                "Timeout": 30
            }
        },
        "SGWordpress": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "GroupDescription": "Control access to Wordpress Instance(s)",
                "SecurityGroupIngress": [
                    {
                        "Description": "Allow HTTP IPv4 IN",
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        },
        "SGDatabase": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "GroupDescription": "Control access to Database",
                "SecurityGroupIngress": [
                    {
                        "Description": "Allow MySQL IN",
                        "IpProtocol": "tcp",
                        "FromPort": "3306",
                        "ToPort": "3306",
                        "SourceSecurityGroupId": {
                            "Ref": "SGWordpress"
                        }
                    }
                ]
            }
        },
        "SGLoadBalancer": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "GroupDescription": "Control access to Load Balancer",
                "SecurityGroupIngress": [
                    {
                        "Description": "Allow HTTP IPv4 IN",
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            }
        },
        "SGEFS": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "GroupDescription": "Control access to EFS",
                "SecurityGroupIngress": [
                    {
                        "Description": "Allow NFS/EFS IPv4 IN",
                        "IpProtocol": "tcp",
                        "FromPort": "2049",
                        "ToPort": "2049",
                        "SourceSecurityGroupId": {
                            "Ref": "SGWordpress"
                        }
                    }
                ]
            }
        },
        "CWAgentConfig": {
            "Type": "AWS::SSM::Parameter",
            "Properties": {
                "Type": "String",
                "Value": "{\n  \"agent\": {\n    \"metrics_collection_interval\": 60,\n    \"run_as_user\": \"root\"\n  },\n  \"logs\": {\n    \"logs_collected\": {\n      \"files\": {\n        \"collect_list\": [\n          {\n            \"file_path\": \"/var/log/secure\",\n            \"log_group_name\": \"/var/log/secure\",\n            \"log_stream_name\": \"{instance_id}\"\n          },\n          {\n            \"file_path\": \"/var/log/httpd/access_log\",\n            \"log_group_name\": [...]
            }
        }
    },
    "Outputs": {
        "OutVPC": { "Value": { "Ref": "VPC" } },
        "OutSnDBA": { "Value": { "Ref": "SNDBA" } },
        "OutSnDBB": { "Value": { "Ref": "SNDBB" } },
        "OutSnDBC": { "Value": { "Ref": "SNDBC" } },
        "OutSnAppA": { "Value": { "Ref": "SNAPPA" } },
        "OutSnAppB": { "Value": { "Ref": "SNAPPB" } },
        "OutSnAppC": { "Value": { "Ref": "SNAPPC" } },
        "OutSnPubA": { "Value": { "Ref": "SNPUBA" } },
        "OutSnPubB": { "Value": { "Ref": "SNPUBB" } },
        "OutSnPubC": { "Value": { "Ref": "SNPUBC" } },
        "OutSGDB": { "Value": { "Ref": "SGDatabase" } },
        "OutSGEFS": { "Value": { "Ref": "SGEFS" } },
        "OutSGWorp": { "Value": { "Ref": "SGWordpress" } },
        "OutSGALB": { "Value": { "Ref": "SGLoadBalancer" } }
    }
}
